master [fix] Dark mode h* element fix

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -125,6 +125,7 @@ strong {
   color: #F5F5F5;
 }
 
-.App-title.dark, .dark .text, .dark .ant-card-meta-description {
+.App-title.dark, .dark .text, .dark .ant-card-meta-description,
+.dark h1, .dark h2, .dark h3, .dark h4, .dark h5, .dark h6 {
   color: #CCC;
 }
